# polyreducer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-ci.yml
python/src/poly_reducer/: __init__.py  api.py  cli.py  lod.py  models.py  reducer.py  worker.py
python/src/polyreducer/: __init__.py  api.py  cli.py  lod.py  reducer.py  worker.py
